2010-04-11  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (run-other-window-manager): Add the ability
	to launch an other window manager and to return to clfswm.

2010-03-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (set-tile-space-layout): Set default
	to 1%.

2009-12-15  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (main-loop): Add a *loop-hook* parameter and a
	loop timeout.

	* src/clfswm-generic-mode.lisp (generic-mode): Add a loop-hook
	parameter and a loop timeout.

2009-12-05  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (main): Add an alternate configuration filename
	parameter.

	* load.lisp: Add a debuging code example.

2009-11-14  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-configuration.lisp (create-configuration-menu): New
	menu to configure all clfswm variables while clfswm is running.

2009-11-12  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (save-configuration-variables): New
	function to save all configuration variables in clfswmrc.

2009-11-11  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-info.lisp (info-mode): Begining of mouse support in
	info mode.
	(set-default-info-keys): Add cursor key support in info mode.

2009-11-08  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/reboot-halt.lisp: Add a Suspend/Reboot/Halt menu in
	contrib.

	* src/clfswm.lisp (main): Add a read-conf-file-p parameter to
	prevent reading the configuration file (this may be useful to
	produce the original documentation without user modifications
	with the rc configuration file).

2009-11-07  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/bindings-second-mode.lisp (set-default-second-keys):
	Simplification of Escape key to close/kill/remove the focus window
	and unhide all windows.

	* src/bindings.lisp (set-default-main-keys): Simplification of